--- a/projects/spark/asdoc/en_US/spark/styles/examples/TypeClassSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/TypeClassSelectorExample.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- Simple example to demonstrate the Type and Class selectors -->
-<FxApplication xmlns="http://ns.adobe.com/mxml/2009" xmlns:custom="*">
-     <Style>
+<FxApplication xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:custom="*">
+     <fx:Style>
         FxList.greenTheme {
             selectionColor: #99FF99;
         }
@@ -15,7 +15,7 @@
             symbolColor: #339966;
             contentBackgroundColor: #C0C0C0;
         }
-    </Style>
+    </fx:Style>
 
     <FxPanel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%"
     	styleName="greenTheme">
