Transferred from the Adobe Open Source Subversion Repository
Revision: 5580
Author:   tan@adobe.com
Date:     2009-03-26T18:21:26.011611Z

Log Message: 
-----------
Updating Advanced CSS samples and CheckBoxExample for ASDoc.

Modified Paths:
--------------
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/FxCheckBoxExample.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/CheckBoxExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/TypeClassSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DescendantSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/IDSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/PseudoSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DateStateComp.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275417 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/styles/examples/TypeClassSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/TypeClassSelectorExample.mxml
@@ -1,12 +1,15 @@
 <?xml version="1.0"?>
 <!-- Simple example to demonstrate the Type and Class selectors -->
-<FxApplication xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:custom="*">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+    xmlns:mx="library://ns.adobe.com/flex/halo" >
+
      <fx:Style>
-        FxList.greenTheme {
+
+        List.greenTheme {
             selectionColor: #99FF99;
         }
 
-        FxPanel.greenTheme {
+        Panel.greenTheme {
             contentBackgroundColor: #FFFFFF;
         }
 
@@ -17,16 +20,16 @@
         }
     </fx:Style>
 
-    <FxPanel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%"
+    <s:Panel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%"
     	styleName="greenTheme">
-        <Text width="300" text="This FxPanel has a styleName, but, the FxList and FxPanel have some different styles defined in a Type+Class selector."
+        <mx:Text width="300" text="This Spark Panel has a styleName, but, the Spark List and Spark Panel have some different styles defined in a Type+Class selector."
         	x="10" y="10" />
-        <FxNumericStepper x="10" y="75" styleName="greenTheme"/>
-        <FxTextInput text="value" x="65" y="75" styleName="greenTheme"/>
-        <FxList id="carList" x="10" y="110" selectedIndex="2" styleName="greenTheme">
-        	<dataProvider>
-        		  <ArrayCollection source="[Fit, Mini, M3, Prius, Blazer, Flex]" />
-        	</dataProvider>
-        </FxList>
-    </FxPanel>
-</FxApplication>
+        <s:TextInput text="value" x="65" y="75" styleName="greenTheme"/>
+        <s:NumericStepper x="10" y="75" styleName="greenTheme"/>
+        <s:List id="carList" x="10" y="110" selectedIndex="2" styleName="greenTheme">
+        	<s:dataProvider>
+        		  <mx:ArrayCollection source="[Fit, Mini, M3, Prius, Blazer, Flex]" />
+        	</s:dataProvider>
+        </s:List>
+    </s:Panel>
+</s:Application>
