--- a/projects/spark/asdoc/en_US/spark/styles/examples/TypeClassSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/TypeClassSelectorExample.mxml
@@ -23,7 +23,7 @@
 
     <s:Panel title="Advanced CSS: Type Selector Example" height="75%" width="75%"
     	styleName="greenTheme" horizontalCenter="0" verticalCenter="0">
-        <s:SimpleText width="300" text="This Spark Panel has a styleName, but, the Spark List and Spark Panel have some different styles defined in a Type+Class selector."
+        <s:Label width="300" text="This Spark Panel has a styleName, but, the Spark List and Spark Panel have some different styles defined in a Type+Class selector."
         	x="10" y="10" />
         <s:TextInput text="value" x="70" y="75" styleName="greenTheme"/>
         <s:NumericStepper x="10" y="75" styleName="greenTheme"/>
